@@ -1,3 +1,12 @@
+2012-07-06 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-02-09
+	* fix rolling stat histograms
+	* no event time graph for first 2 lumis
+	* correct event time errors
+	* "dqmEnabled" xdaq parameter
+	* fixing dangerous access to dqm during stopping (if dqm disabled)
+
 2012-07-04 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-08
